--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 										The mainstream media have gone way passed having a slight bias. Now they never show two sides of an issue. In their mind there is a single narrative, a single 'acceptable' way to view things. Anyone or anything outside of that will be either completely ignored or comopletey dehumaized. It's sad and ironic that these once great seekers of truth don't realize that they are contributing to the destruction of society. This polarization is bad for the whole country.
 									</p>
 									<p>
-										Take a walk around any neighborhood in New York City, and ask people what they think about current political issues such as abortion, border security and immigration, inflation, racism and policing etc etc. You will quickly find that most people are in the middle on these. But the media takes the views of a minority on the extreme left, and amplifies them to fever pitch, making it seem like the whole world has gone mad.
+										Take a walk around any neighborhood in New York City, and ask people what they think about current political issues such as abortion, border security and immigration, inflation, racism and policing etc etc. You will quickly find that most people are in the middle on these. But the media takes the views of a minority on the extremes, and amplifies them to fever pitch, making it seem like the whole world has gone mad.
 									</p>
 									<p>
 										The purpose of this website is to discuss these issues and try to deliberately find the gray area. We all have to share this country together, and the way to get back to all being Americans again is to find what we have in common, not what divides us, and choose policies and politicans that serve the vast majority of people.
