fixing spelling mistakes

--- a/index.html
+++ b/index.html
@@ -49,95 +49,20 @@
 										There are very few situations in life which are black and white, usually there is some middle ground, or gray area. It is this gray area that we should be striving for. So why aren't we?
 									</p>
 									<p>
-										Social media has caused us to become hyper-polarized on every issue. Politicians capitalize on this and now American politics is like sports teams more than ever before. Choose your side and back them NO MATTER WHAT.
+										Social media has caused us to become hyper-polarized on every issue. Politicians capitalize on this, and now American politics is like sports teams more than ever before. Choose your side and back them NO MATTER WHAT.
 									</p>
 									<p>
-										The mainstream media have gone way passed having a slight bias. Now they never show two sides of an issue. In their mind there is a single narrative, a single 'acceptable' way to view things. Anyone or anything outside of that will be either completely ignored or comopletey dehumaized. It's sad and ironic that these once great seekers of truth don't realize that they are contributing to the destruction of society. This polarization is bad for the whole country.
+										The mainstream media have gone way passed having a slight bias. Now they never show two sides of an issue. In their mind, there is a single narrative, a single 'acceptable' way to view things. Anyone or anything outside of that will be either completely ignored or completely dehumanized. It's sad and ironic that these once great seekers of truth don't realize that they are contributing to the destruction of society. This polarization is bad for the whole country.
 									</p>
 									<p>
-										Take a walk around any neighborhood in New York City, and ask people what they think about current political issues such as abortion, border security and immigration, inflation, racism and policing etc etc. You will quickly find that most people are in the middle on these. But the media takes the views of a minority on the extremes, and amplifies them to fever pitch, making it seem like the whole world has gone mad.
+										Take a walk around any neighborhood in New York City, and ask people what they think about current political issues such as abortion, border security and immigration, inflation, racism and policing etc. You will quickly find that most people are in the middle on these. But the media takes the views of a minority on the extremes, and amplifies them to fever pitch, making it seem like the whole world has gone mad.
 									</p>
 									<p>
-										The purpose of this website is to discuss these issues and try to deliberately find the gray area. We all have to share this country together, and the way to get back to all being Americans again is to find what we have in common, not what divides us, and choose policies and politicans that serve the vast majority of people.
+										The purpose of this website is to discuss these issues and try to deliberately find the gray area. We all have to share this country together, and the way to get back to all being Americans again is to find what we have in common, not what divides us, and choose policies and politicians that serve the vast majority of people.
 									</p>
 								</header>
 								<a href="#" class="image main"><img src="images/gray-image.jpg" alt="" /></a>
 							</article>
-
-							<section class="posts">
-								<article>
-									<header>
-										<span class="date">April 24, 2017</span>
-										<h2><a href="#">Sed magna<br />
-										ipsum faucibus</a></h2>
-									</header>
-									<a href="#" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
-									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
-									</ul>
-								</article>
-								<article>
-									<header>
-										<span class="date">April 22, 2017</span>
-										<h2><a href="#">Primis eget<br />
-										imperdiet lorem</a></h2>
-									</header>
-									<a href="#" class="image fit"><img src="images/pic03.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
-									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
-									</ul>
-								</article>
-								<article>
-									<header>
-										<span class="date">April 18, 2017</span>
-										<h2><a href="#">Ante mattis<br />
-										interdum dolor</a></h2>
-									</header>
-									<a href="#" class="image fit"><img src="images/pic04.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
-									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
-									</ul>
-								</article>
-								<article>
-									<header>
-										<span class="date">April 14, 2017</span>
-										<h2><a href="#">Tempus sed<br />
-										nulla imperdiet</a></h2>
-									</header>
-									<a href="#" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
-									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
-									</ul>
-								</article>
-								<article>
-									<header>
-										<span class="date">April 11, 2017</span>
-										<h2><a href="#">Odio magna<br />
-										sed consectetur</a></h2>
-									</header>
-									<a href="#" class="image fit"><img src="images/pic06.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
-									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
-									</ul>
-								</article>
-								<article>
-									<header>
-										<span class="date">April 7, 2017</span>
-										<h2><a href="#">Augue lorem<br />
-										primis vestibulum</a></h2>
-									</header>
-									<a href="#" class="image fit"><img src="images/pic07.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
-									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
-									</ul>
-								</article>
-							</section>
 							
 					</div>
 
