--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
 						<p>
 							There are no solutions, there are only trade-offs - Thomas Sowell.
 						</p>
+						<p>
+							Am I not destroying my enemies when I make friends of them? - Abraham Lincoln
+						</p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
 						</ul>
